--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,8 @@ jobs:
         - '3.0'
         - '3.1'
         - '3.2'
+    env:
+      CC_TEST_REPORTER_ID: "${{ secrets.CC_TEST_REPORTER_ID }}"
     steps:
     - uses: actions/checkout@v4
     - name: Set up Ruby
@@ -26,3 +28,7 @@ jobs:
         bundler-cache: true
     - name: Run tests
       run: bundle exec rake
+    - name: Report code coverage
+      if: "${{ github.ref == 'refs/heads/master' && matrix.ruby-version == '3.2' }}"
+      continue-on-error: true
+      uses: paambaati/codeclimate-action@v5
